# HeatSolvers

./: Parameters.hh  README.md
2D/: CMakeLists.txt  Initial_data.cc  Main.cc
2D/Examples/Gaussian/: Parameters.hh
2D/Utils/: Plot.py3
2D/Utils/VTK_visualize/: CMakeLists.txt  Load_iteration.cc  Main.cc  Parameters.hh  Read_dset.cc  SwitchIterationCallback.cc  build.sh
2D/Utils/VTK_visualize/include/: Check_parameters.hh  Declare_functions.hh  SwitchIterationCallback.hh
2D/include/: Check_parameters.hh  Declare_functions.hh
